   generator npg::samplesheet.
 - To avoid code repetitions, created a parent class for different samplesheet
   generators and moved common code there.
 - Extended the code for the samplesheet daemon to generate samplesheets for
   NovaSeqX instruments.
 - Removed remaining unused test data from the era of xml st::api::lims driver.

release 98.1.0
 - Added a new method, latest_revision_for_modification, to
   npg_tracking::Schema::Result::Instrument to retrieve the latest modification
   revision for the instrument.
 - Added 'dragen_software_version' script argument
   for bin/npg_samplesheet_generator_NovaSeqXSeries. If not set and
   id_run is defined, defaults to the record for the latest 'Dragen'
   modification for the NovaSeqX instrument on which the flowcell will be
   sequenced.

release 98.0.0
 - Removed the use of 'xml' lims driver from all tests.
 - Deleted 'xml' lims driver class and all classes which supported this
   functionality, together with all related tests and test data.
 - In release 97.0.0, the default LIMS driver type in samplesheet generation
   was changed to 'ml_warehouse'. Following this change, the code for
   auto-generation of MiSeq default samplesheets is now simplified to exclude
   an explicit creation of LIMS objects.
 - Changes to st::api::lims, which are not related to the 'xml' lims driver
   removal:
     - deleted all previously deprecated methods ('seq_qc_state',
       'associated_lims', 'associated_child_lims', 'associated_child_lims_ia');
     - deleted methods for which we do not have data in ml warehouse, our
       primary source of LIMS data ('request_id', 'project_id', 'project_name');
     - deleted all code for computing inline tag indexes and inferring
       tag sequences and library types from sample description since
       definitions like this have not been in use for the last six years;
     - reimplemented the 'reference_genome' method to exclude a fallback to