@@ -1,2 +1,2 @@
 [% content %]
-NPG, DNA Pipelines Informatics
+NPG on behalf of DNA Pipelines and GSLP
