@@ -156,7 +156,7 @@ Run 21915 was assigned status "run pending" on 2017-02-08 11:49:39 by joe_events
 NPG page for this run:
 http://sfweb.internal.sanger.ac.uk:9000/perl/npg/run/21915
 
-NPG, DNA Pipelines Informatics
+NPG on behalf of DNA Pipelines and GSLP
 REPORT
   is ($e->report_full(), $report, 'full report text');
 
@@ -173,7 +173,7 @@ $lims_summary
 NPG page for this run:
 http://sfweb.internal.sanger.ac.uk:9000/perl/npg/run/21915
 
-NPG, DNA Pipelines Informatics
+NPG on behalf of DNA Pipelines and GSLP
 REPORT1
   is ($e->report_full($e->lims()), $report, 'full report text with LIMs data');
 
@@ -217,7 +217,7 @@ Instrument HS8 status changed to "wash performed" on $date_as_string by joe_appr
 NPG page for this instrument:
 http://sfweb.internal.sanger.ac.uk:9000/perl/npg/instrument/HS8
 
-NPG, DNA Pipelines Informatics
+NPG on behalf of DNA Pipelines and GSLP
 REPORT2
   is ($e->report_full($e->lims()), $report, 'full report text');
 
@@ -231,7 +231,7 @@ Instrument HS8 status changed to "wash performed" on $date_as_string by joe_appr
 NPG page for this instrument:
 http://sfweb.internal.sanger.ac.uk:9000/perl/npg/instrument/HS8
 
-NPG, DNA Pipelines Informatics
+NPG on behalf of DNA Pipelines and GSLP
 REPORT3
   is ($e->report_full($e->lims()), $report, 'full report text with a comment');
   is (scalar @{$e->reports}, 1, 'One report generated');
@@ -272,7 +272,7 @@ $lims_summary
 NPG page for this run:
 http://sfweb.internal.sanger.ac.uk:9000/perl/npg/run/21915
 
-NPG, DNA Pipelines Informatics
+NPG on behalf of DNA Pipelines and GSLP
 REPORT4
   is ($e->report_full($e->lims()), $report, 'full report text with LIMs data');
 };
@@ -325,7 +325,7 @@ Lane 2: Samples
 NPG page for this run:
 http://sfweb.internal.sanger.ac.uk:9000/perl/npg/run/21915
 
-NPG, DNA Pipelines Informatics
+NPG on behalf of DNA Pipelines and GSLP
 REPORT5
   is ($e->report_full($e->lims()), $report, 'full report text with LIMs data');
 };
@@ -362,7 +362,7 @@ Instrument HS8 annotated by joe_loader on $date_as_string - New instrument annot
 NPG page for this instrument:
 http://sfweb.internal.sanger.ac.uk:9000/perl/npg/instrument/HS8
 
-NPG, DNA Pipelines Informatics
+NPG on behalf of DNA Pipelines and GSLP
 REPORT6
   is ($e->report_full($e->lims()), $report, 'full report text');
 };
