@@ -37,5 +37,5 @@ Analysis and QC information for this run will be/is available:
 http://sfweb.internal.sanger.ac.uk:1959/illumina/runs/21915
 http://sfweb.internal.sanger.ac.uk:1959/checks/runs/21915
 
-NPG, DNA Pipelines Informatics
+NPG on behalf of DNA Pipelines and GSLP
 
