@@ -36,7 +36,7 @@ Lane 7: Samples
     ... 6 samples in total
 
 
-The manual QC review is complete and your data should now be available from iRODS (see http://scratchy.internal.sanger.ac.uk/wiki/index.php/IRODS_for_Sequencing_Users ). 
+The manual QC review is complete and your data should now be available from iRODS (see https://ssg-confluence.internal.sanger.ac.uk/display/FARM/iRODS ).
 
 NPG page for the run:
 http://sfweb.internal.sanger.ac.uk:9000/perl/npg/run/21915
@@ -45,5 +45,5 @@ Analysis and QC information for this run will be/is available:
 http://sfweb.internal.sanger.ac.uk:1959/illumina/runs/21915
 http://sfweb.internal.sanger.ac.uk:1959/checks/runs/21915
 
-NPG, DNA Pipelines Informatics
+NPG on behalf of DNA Pipelines and GSLP
 
